--- a/src/app/design/adminhtml/default/default/template/integernet_haendlerbund/apply.phtml
+++ b/src/app/design/adminhtml/default/default/template/integernet_haendlerbund/apply.phtml
@@ -86,6 +86,6 @@
     var integerNetHaendlerbundApply = new IntegerNetHaendlerbundApply();
 
 </script>
-<button onclick="integerNetHaendlerbundApply.apply();" class="scalable" type="button" id="<?php echo $this->__('Import Legal Text') ?>">
-    <span><?php echo $this->escapeHtml($this->getButtonLabel()) ?></span>
+<button onclick="integerNetHaendlerbundApply.apply();" class="scalable" type="button" id="<?php echo $this->getHtmlId() ?>">
+    <span><?php echo $this->__('Import Legal Text') ?></span>
 </button>
