--- a/src/app/design/adminhtml/default/default/template/integernet_haendlerbund/apply.phtml
+++ b/src/app/design/adminhtml/default/default/template/integernet_haendlerbund/apply.phtml
@@ -2,8 +2,9 @@
 /**
  * @category   IntegerNet
  * @package    IntergerNet_Haendlerbund
- * @copyright  Copyright (c) 2012-2013 integer_net GmbH (http://www.integer-net.de/)
+ * @copyright  Copyright (c) 2013-2014 integer_net GmbH (http://www.integer-net.de/)
  * @license    http://opensource.org/licenses/osl-3.0.php Open Software Licence 3.0 (OSL-3.0)
+ * @author     integer_net GmbH <info@integer-net.de>
  * @author     Soeren Zorn <sz@integer-net.de>
  * @author     Viktor Franz <vf@integer-net.de>
  */
@@ -15,7 +16,7 @@
  */
 ?>
 <script type="text/javascript">
-
+    //<![CDATA[
     IntegerNetHaendlerbundApply = Class.create();
     IntegerNetHaendlerbundApply.prototype = {
 
@@ -85,7 +86,8 @@
 
     var integerNetHaendlerbundApply = new IntegerNetHaendlerbundApply();
 
+    //]]>
 </script>
 <button onclick="integerNetHaendlerbundApply.apply();" class="scalable" type="button" id="<?php echo $this->getHtmlId() ?>">
-    <span><?php echo $this->__('Import Legal Text') ?></span>
+    <span><?php echo $this->escapeHtml($this->getButtonLabel()) ?></span>
 </button>
